# SLAM-homework

ch1 概述与预备知识/Hello/: CMakeLists.txt  useHello.cpp
ch1 概述与预备知识/Hello/src/: hello.cpp
ch1 概述与预备知识/作业/: 郭犇-第一章作业.md
ch1/Hello/include/: hello.h
ch1/Hello/lib/: CMakeLists.txt
ch1/Hello/src/: CMakeLists.txt
ch2 刚体运动/作业/: 曾是少年-第二章作业.md
ch2 刚体运动/作业/image/: SouthEast
ch2/useEigen/: useeigen.cpp
ch2/useGeometry/: CMakeLists.txt
ch3 李群与李代数/draw_trajectory/: CMakeLists.txt
ch3 李群与李代数/draw_trajectory2/: CMakeLists.txt  rmse.cpp
ch3 李群与李代数/作业/: 曾是少年-第三章作业.md
ch3/draw_trajectory/: CMakeLists.txt  draw_trajectory.cpp  rmse.cpp
ch4/: 曾是少年-第四章作业.md
ch4 相机模型与非线性优化/GaussNewton/: CMakeLists.txt
ch4 相机模型与非线性优化/disparity/: CMakeLists.txt  disparity.cpp
ch4 相机模型与非线性优化/作业/: 曾是少年-第四章作业.md
ch4/GaussNewton/: gaussnewton.cpp
ch4/undistort/: CMakeLists.txt  undistort_image.cpp
ch5 特征点法视觉里程计/E2RT/: CMakeLists.txt
ch5 特征点法视觉里程计/ICP/: main.cpp
ch5 特征点法视觉里程计/ORB_extrater/: computeORB.cpp
ch5 特征点法视觉里程计/作业/: 曾是少年-第五章作业.md
ch5 特征点法视觉里程计/曾是少年-第五章作业/E2RT/: E2Rt.cpp
ch5 特征点法视觉里程计/曾是少年-第五章作业/GN-BA/: CMakeLists.txt  GN-BA.cpp
ch5 特征点法视觉里程计/曾是少年-第五章作业/ICP/: CMakeLists.txt
ch5 特征点法视觉里程计/曾是少年-第五章作业/ORB_extrater/: CMakeLists.txt  computeORB.cpp
ch6 直接法视觉里程计/Direct_method/: direct_method.cpp
ch6 直接法视觉里程计/LK/: CMakeLists.txt  optical_flow.cpp
ch6 直接法视觉里程计/disparty/: disp.cpp
ch6 直接法视觉里程计/作业/: 曾是少年-第六章作业.md
ch6 直接法视觉里程计/曾是少年-第六章作业/Direct_method/: CMakeLists.txt  direct_method.cpp
ch6 直接法视觉里程计/曾是少年-第六章作业/disparty/: CMakeLists.txt  disp.cpp
ch7 后端优化/曾是少年-第七章作业/: 第七章作业.md
ch7 后端优化/曾是少年-第七章作业/SLAM_ch1_Direct_BA/: CMakeLists.txt  directBA.cpp
ch7 后端优化/曾是少年-第七章作业/g2o/: CMakeLists.txt  common.cpp  common.h  final.ply  g2o.cpp  random.h  rotation.h
useEigen/: CMakeLists.txt
useGeometry/: useGeometry.cpp
作业21-四元数插值/: check.sh  slerpQuaternion.cpp
大作业/: 大作业-VIOBA推导.md  大作业讲评.md
